--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<properties>
+    <jenkins.e2eTests.reportsDirectory>target/protractor-reports</jenkins.e2eTests.reportsDirectory>
+</properties>
 </project>
